# facedetection-demo

./: README.md  key_recorder.jks
app/: build.gradle
app/src/androidTest/java/com/cnabcpm/facedetection/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: idl-license.face-android
app/src/main/java/com/cnabcpm/facedetection/: ActivityExtension.kt  App.kt  BindingAdapter.kt  Config.java  FaceViewMedel.kt  ImageUtil.java  MainActivity.kt  RegDetectActivity.java  ResourceSettings.java
app/src/main/res/drawable/: bt_red_shape_change.xml
app/src/main/res/layout/: activity_main.xml  activity_reg_detected.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/cnabcpm/facedetection/: ExampleUnitTest.kt
facesdk/: CMakeLists.txt  build.gradle
facesdk/src/main/: AndroidManifest.xml
facesdk/src/main/cpp/: RtspClient.cpp  RtspClient.hpp  RtspJni.cpp
facesdk/src/main/cpp/include/libavutil/: error.h
facesdk/src/main/java/com/baidu/aip/: FaceDetector.java  FaceSDKManager.java  ImageFrame.java  RtspClient.java
facesdk/src/main/java/com/baidu/aip/face/: CameraImageSource.java  FaceDetectManager.java  FaceFilter.java  LivenessDetector.java  LogUtil.java  PreviewView.java  RtspImageSource.java  TexturePreviewView.java
facesdk/src/main/java/com/baidu/aip/face/camera/: Camera1Control.java  Camera2Control.java  ICameraControl.java
gradle/wrapper/: gradle-wrapper.properties
